# wasm-game

./: Cargo.toml  Makefile  README.md
src/: game.rs  game3d.rs  lib.rs  traits.rs
static/: index.html
